rework nodata handling
